--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -36,3 +36,8 @@
     max-width: 1.6rem!important;
     margin-left: 0.7rem;
 }
+
+.alert-fit-content{
+    margin-left: 1rem;
+    width: fit-content;
+}
